fix: moved commands to root so it works with jar, shadow jar. Yeah, user should manually copy commands, but hey, it's working, so